# ext_py_with_c_c-

./: .gitignore  CMakeLists.txt
CPython/: CMakeLists.txt  README.md  main.c  main.py  setup.py  spammodule.c
boost_python/: CMakeLists.txt  README.md  hello.cpp  main.cpp  main.py  python_code.txt  test.cpp
